--- a/ActividadC3/detrasdelmuro.html
+++ b/ActividadC3/detrasdelmuro.html
@@ -13,7 +13,7 @@
                 <div class="caja__trasera-login">
                     <h3>Hola</h3>
                     <p>¡TUS DATOS HAN SIDO REGISTRADOS, intenta checar de nuevo!</p>
-                    <button id="btn__iniciar-sesion"> <a href="inicio.html">Cerrar Sesión</a></button>
+                    <button id="btn__iniciar-sesion"> <a href="index.html">Cerrar Sesión</a></button>
                 </div>
             </div>
 
